fixed spacing between skills and about me

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body {
   font-family: 'Rubik', sans-serif;
   font-size: 40px;
   font-weight: 500;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
 }
 
 #about-me p {
